<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            style="@style/quesStyle"
            android:text="@string/ques1" />
        <CheckBox
            android:id="@+id/option_red"
            style="@style/checkboxStyle"
            android:text="@string/red"/>
        <CheckBox
            android:id="@+id/option_blue"
            style="@style/checkboxStyle"
            android:text="@string/blue"/>
        <CheckBox
            android:id="@+id/option_green"
            style="@style/checkboxStyle"
            android:text="@string/green"/>
        <CheckBox
            android:id="@+id/option_yellow"
            style="@style/checkboxStyle"
            android:text="@string/yellow"/>
        <TextView
            style="@style/quesStyle"
            android:text="@string/ques2" />
        <RadioGroup
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/option_true_q2"
                style="@style/buttonStyle"
                android:text="@string/True"/>
            <RadioButton
                android:id="@+id/option_false_q2"
                style="@style/buttonStyle"
                android:text="@string/False"/>
        </RadioGroup>
        <TextView
            style="@style/quesStyle"
            android:text="@string/ques3" />
        <EditText
            android:id="@+id/answer_q3"
            style="@style/quesStyle"
            android:inputType="number"
            android:hint="@string/hint"/>
        <TextView
            style="@style/quesStyle"
            android:text="@string/ques4" />
        <RadioGroup
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/option_true_q4"
                style="@style/buttonStyle"
                android:text="@string/True"/>
            <RadioButton
                android:id="@+id/option_false_q4"
                style="@style/buttonStyle"
                android:text="@string/False"/>
        </RadioGroup>
        <TextView
            style="@style/quesStyle"
            android:text="@string/ques5" />
        <EditText
            android:id="@+id/answer_q5"
            style="@style/quesStyle"
            android:inputType="number"
            android:layout_marginBottom="100dp"
            android:hint="@string/hint"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="showResult"
        android:text="@string/submit"/>
</RelativeLayout>
</ScrollView>